--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-neweditor.css">
+    <link rel="stylesheet" href="/css/style-neweditor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css"
@@ -45,7 +45,7 @@
     <i id="icon-sun" class="fa-solid fa-sun" style="display: inline-block;"></i>
     <i id="icon-moon" class="fa-solid fa-moon" style="display: none;"></i>
 </button>
-<div th:replace="/fragments/usos :: cabeza"></div>
+
 <main>
     <section class="form-container" aria-labelledby="form-title">
         <div class="formulario">
@@ -223,8 +223,8 @@
 
 
 <a href="/index"> Volver a la pagina principal</a>
-<script src="script-formulario.js"></script>
-<script src="script.js"></script>
+<script src="/js/script.js"></script>
+<script src="/js/script-formulario.js"></script>
 <script>
     cargarProyectos('container-tarjetas-proyectos', 'edicion');
 </script>
