--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -68,15 +68,17 @@
                 <!-- Nuevos inputs agregados -->
                 <div class="form-row">
                     <div class="input-group">
-                        <input required="" type="text" name="text" autocomplete="off" class="input">
-                        <label class="user-label">Nombres</label>
+                        <input required="" type="text" name="text" autocomplete="off" class="input" id="nombre-input">
+                        <label class="user-label" for="nombre-input">Nombres</label>
+
                     </div>
                     <button type="button" class="btn-save" onclick="guardarNombre()">Guardar</button>
                 </div>
                 <div class="form-row">
                     <div class="input-group">
-                        <input required="" type="text" name="text" autocomplete="off" class="input">
-                        <label class="user-label">Apellidos</label>
+                        <input required="" type="text" name="text" autocomplete="off" class="input" id="apellido-input">
+                        <label class="user-label" for="apellido-input">Apellidos</label>
+
                     </div>
                     <button type="button" class="btn-save" onclick="guardarApellido()">Guardar</button>
                 </div>
