--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,7 +115,7 @@
                 <h2 class="texto-proyectos anima-proyec">Mis <span>Proyectos</span></h2>
                 <div class="targetas">
                     <div class="targeta anima-proyec">
-                        <img src="targeta-cafe.jpg" alt="cafeteria">
+                        <img src="/assets/targeta-cafe.jpg" alt="cafeteria">
                         <div class="texto-targeta">
                             <h3 class="titulo-targeta">Proyecto 1</h3>
                             <p class="descripcion-targeta">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ipsum itaque ullam culpa animi maxime ducimus vero iste magni eum, veritatis illo inventore perferendis consequuntur ea aspernatur blanditiis quo? Sed?</p>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="targeta anima-proyec">
-                        <img src="targeta-app.jpg" alt="servicios">
+                        <img src="/assets/targeta-app.jpg" alt="servicios">
                         <div class="texto-targeta">
                             <h3 class="titulo-targeta">Proyecto 2</h3>
                             <p class="descripcion-targeta">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ipsum itaque ullam culpa animi maxime ducimus vero iste magni eum, veritatis illo inventore perferendis consequuntur ea aspernatur blanditiis quo? Sed?</p>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="targeta anima-proyec">
-                        <img src="targeta-app-movile.png" alt="floreria">
+                        <img src="/assets/targeta-app-movile.png" alt="floreria">
                         <div class="texto-targeta">
                             <h3 class="titulo-targeta">Proyecto 3</h3>
                             <p class="descripcion-targeta">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ipsum itaque ullam culpa animi maxime ducimus vero iste magni eum, veritatis illo inventore perferendis consequuntur ea aspernatur blanditiis quo? Sed?</p>
